<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="com.example.android.courtcounter.MainActivity">

        <LinearLayout
            style="@style/ScoreColumnLayout">

            <TextView
                style="@style/TeamNameLayout"
                android:text="@string/teamA"/>

            <TextView
                style="@style/TeamScoreLayout"
                android:id="@+id/team_a_score" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addTouchdownForTeamA"
                android:text="@string/addTouchdown" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addFieldGoalForTeamA"
                android:text="@string/addFieldGoal" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addSafetyForTeamA"
                android:text="@string/addSafety" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addExtraPointForTeamA"
                android:text="@string/addExtraPoint" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            style="@style/ScoreColumnLayout">

            <TextView
                style="@style/TeamNameLayout"
                android:text="@string/teamB"/>

            <TextView
                style="@style/TeamScoreLayout"
                android:id="@+id/team_b_score" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addTouchdownForTeamB"
                android:text="@string/addTouchdown" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addFieldGoalForTeamB"
                android:text="@string/addFieldGoal" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addSafetyForTeamB"
                android:text="@string/addSafety" />

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/addExtraPointForTeamB"
                android:text="@string/addExtraPoint" />

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScores"
        android:text="Reset" />

</RelativeLayout>